preloader's position changed from absolute to fixed which solved the problem of showing the content behind the loader on scroll

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -34,7 +34,7 @@ body{
 #loader{
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     background-color: #1c283e;
